src/test/deca/syntax/valid/declVar-multipleDeclOneLine.deca
{
    int a, m = 2, p = 3;
}