src/test/deca/syntax/invalid/declVar-notInTheBeginning.deca
{
    int a = 3;
    a = 7;
    float b;
}